--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "parcel": "^2.8.3",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.59.3"
+  },
+  "dependencies": {
+    "just-validate": "^4.2.0"
   }
 }
